--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
     Created on : 9 déc. 2015, 00:18:38
     Author     : Michel
@@ -17,75 +12,23 @@ header {
     margin-bottom: 20px;
 }
 
-nav {
-    padding: 16px 0;
+.navbar a {
+    color: #000;
 }
 
-nav ul {
-    margin: 0;
+.navbar-brand {
     padding: 0;
-    list-style: none;
-    font-size: 12px;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 30px;
-    letter-spacing: 1pt;
-}
-
-nav ul li:last-child {
-    margin-right: 0;
-}
-
-nav ul li a {
-    color: #3E4C6F;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    color: #ff5c56;
-    text-decoration: none;
-}
-
-.sub-nav {
-    background-color: #FFF;
-    position: absolute;
-    padding: 12px 21px;
-    margin-left: -20px;
-    width: 178px;
-    display: none;
-}
-
-.sub-nav ul {
-    margin: 0;
-    padding: 0;
-    font-size: 13px;
-    list-style: none;
-}
-
-.sub-nav ul li {
-    display: block;
-    padding: 12px 0;
     margin: 0;
 }
 
-.sub-nav ul li:last-child {
-    border-bottom: 0;
-    margin-right: 0;
+#owl-carousel {
+    width: 100%;
+    text-align: center;
 }
 
-.active {
-    color: #ff5c56;
-    font-weight: bold;
-}
-
-.container-background {
-    background: url('../img/background.jpg');
-    background-size: 100% 100%;
-    background-position-y: 50px;
-    height: 500px;
-    background-repeat: no-repeat;
+#owl-carousel img {
+    max-width: 100%;
+    max-height: 400px;
 }
 
 h1, h2, h3 {
